--- a/BloggoBackend/bloggo/src/main/resources/application.properties
+++ b/BloggoBackend/bloggo/src/main/resources/application.properties
@@ -32,3 +32,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 sendgrid.api.key=
 sendgrid.from.email=
 sendgrid.from.name=
+
+#Paypal
+paypal.client.id=
+paypal.client.secret=
+paypal.mode=sandbox
