Implement password reset functionality and enhance email service integration

--- a/BloggoBackend/bloggo/src/main/resources/application.properties
+++ b/BloggoBackend/bloggo/src/main/resources/application.properties
@@ -30,8 +30,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # SendGrid API
 sendgrid.api.key=
-sendgrid.from.email=
-sendgrid.from.name=
+sendgrid.from.email=sasuniwijerathne@gmail.com
+sendgrid.from.name=springboot
 
 #Paypal
 paypal.client.id=
