Implement password reset functionality and enhance frontend integration

--- a/BloggoBackend/bloggo/src/main/resources/application.properties
+++ b/BloggoBackend/bloggo/src/main/resources/application.properties
@@ -37,3 +37,6 @@ sendgrid.from.name=springboot
 paypal.client.id=
 paypal.client.secret=
 paypal.mode=sandbox
+
+# Serve static files from an external folder
+spring.web.resources.static-locations=file:///absolute/path/to/BloggoFrontend/pages/
