trying text-to-speech functionality.

--- a/BloggoBackend/bloggo/src/main/resources/application.properties
+++ b/BloggoBackend/bloggo/src/main/resources/application.properties
@@ -40,3 +40,19 @@ paypal.mode=sandbox
 
 # Serve static files from an external folder
 spring.web.resources.static-locations=file:///absolute/path/to/BloggoFrontend/pages/
+
+
+#Openai
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+
+
+#Openapi
+huggingface.api.key=
+
+# Add to your application.properties
+openai.api.key=your_openai_api_key_here
+openai.model=gpt-3.5-turbo-instruct
+openai.temperature=0.7
+openai.max_tokens=150
+
+
