Added Swagger annotations for API documentation.

--- a/BloggoBackend/bloggo/src/main/resources/application.properties
+++ b/BloggoBackend/bloggo/src/main/resources/application.properties
@@ -53,3 +53,5 @@ openai.model=gpt-3.5-turbo-instruct
 openai.temperature=0.7
 openai.max_tokens=150
 
+#swagger
+#http://localhost:8080/swagger-ui/index.html
