--- a/BloggoBackend/bloggo/pom.xml
+++ b/BloggoBackend/bloggo/pom.xml
@@ -140,6 +140,13 @@
 			<version>1.0.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.12</version>
+		</dependency>
+
 
 
 	</dependencies>
