--- a/BloggoBackend/bloggo/pom.xml
+++ b/BloggoBackend/bloggo/pom.xml
@@ -147,12 +147,11 @@
 			<version>2.8.12</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.google.firebase</groupId>
-			<artifactId>firebase-admin</artifactId>
-			<version>9.2.0</version>
-		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 
 	</dependencies>
 
