--- a/BloggoBackend/bloggo/src/main/resources/application.properties
+++ b/BloggoBackend/bloggo/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=Ijse@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
+frontend.url=http://localhost:63342/Bloggo-springboot/BloggoFrontend/pages
+
 
 #JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -55,3 +57,7 @@ openai.max_tokens=150
 
 #swagger
 #http://localhost:8080/swagger-ui/index.html
+
+#Oauth2 google
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration..google.client-secret=
