--- a/BloggoBackend/bloggo/src/main/resources/application.properties
+++ b/BloggoBackend/bloggo/src/main/resources/application.properties
@@ -59,5 +59,5 @@ openai.max_tokens=150
 #http://localhost:8080/swagger-ui/index.html
 
 #Oauth2 google
-spring.security.oauth2.client.registration.google.client-id=
-spring.security.oauth2.client.registration..google.client-secret=
+#spring.security.oauth2.client.registration.google.client-id=
+#spring.security.oauth2.client.registration..google.client-secret=
